--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,3 @@
-fastapi>=0.68.0,<0.69.0
-pydantic>=1.8.0,<2.0.0
-uvicorn>=0.15.0,<0.16.0
-aiohttp>=3.8.1
+Django==4.0.6
+djangorestframework==3.13.1
+psycopg2>=2.8
