--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./backend/:/backend/
-    command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
+    command: python manage.py runserver 0.0.0.0:8000
     env_file:
       - ./backend/.env
     ports:
