Getting responses from backend

--- a/rasa/data/nlu.yml
+++ b/rasa/data/nlu.yml
@@ -172,15 +172,6 @@ nlu:
     - xочу повторить слова
     - практика слов
     - слова
-- intent: translate
-  examples: |
-    - как на английском
-    - как первести
-    - как переводится
-    - как будет на английском
-    - перевод
-    - переведи
-    - переведи
 - intent: support
   examples: |
     - мне не позвонил учитель
@@ -189,16 +180,6 @@ nlu:
     - ничего не работает
     - ничего не получается
     - ничего не понимаю
-- intent: day_off
-  examples: |
-    - отменить уроки
-    - нужен выходной
-    - не хочу работать
-- intent: day_off_today
-  examples: |
-    - отменить все уроки на сегодня
-    - сегодня выходной
-    - я не успеваю на урок
 - intent: stop_pending_today
   examples: |
     - больше не записывать ко мне сегодня
@@ -255,3 +236,23 @@ nlu:
     - выбрать рабочие часы
     - выбрать выходные
     - выходные
+- intent: day_off_today
+  examples: |
+    - отменить все уроки на сегодня
+    - сегодня выходной
+    - я не успеваю на урок
+    - сегодня уроков не будет
+- intent: translate
+  examples: |
+    - как на английском
+    - как первести
+    - как переводится
+    - как будет на английском
+    - перевод
+    - переведи
+- intent: day_off
+  examples: |
+    - отменить уроки
+    - нужен выходной
+    - не хочу работать
+    - я ухожу
