Messages from backend

--- a/rasa/data/nlu.yml
+++ b/rasa/data/nlu.yml
@@ -220,13 +220,6 @@ nlu:
     - никогда
     - не зачем
     - не надо
-- intent: day_off_tomorrow
-  examples: |
-    - завтра я не работаю
-    - настроить часы работы
-    - завтра выходной
-    - завтра беру отгул
-    - завтра у меня выходной
 - intent: working_hours
   examples: |
     - настроить расписание
@@ -256,3 +249,11 @@ nlu:
     - нужен выходной
     - не хочу работать
     - я ухожу
+- intent: day_off_tomorrow
+  examples: |
+    - завтра я не работаю
+    - настроить часы работы
+    - завтра выходной
+    - завтра беру отгул
+    - завтра у меня выходной
+    - завтра сплю
